--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<script>window.location.href = "https://lovrotesija.github.io/online_store/pocetna_HTML_.php";</script>
+<script>window.location.href = "https://lovrotesija.github.io/pocetna_HTML_.php";</script>
 
 
 </body>
